[gd_scene load_steps=28 format=3 uid="uid://bwlhts28yc1r1"]

[ext_resource type="Script" uid="uid://dnwyx762ot6qk" path="res://level_controller.gd" id="1_level"]
[ext_resource type="Script" uid="uid://67m44jl6k2ki" path="res://camera_controller.gd" id="2_camera"]
[ext_resource type="Texture2D" uid="uid://hfxo2iqiwapd" path="res://kloofendal_48d_partly_cloudy_puresky_4k.hdr" id="3_hdr"]
[ext_resource type="PackedScene" uid="uid://marble12345" path="res://marble.tscn" id="4_marble_scene"]
[ext_resource type="Script" uid="uid://cnedem1lvrcr6" path="res://game_manager.gd" id="5_game"]
[ext_resource type="Script" uid="uid://dv51koustvna3" path="res://sound_generator.gd" id="6_sound"]
[ext_resource type="PackedScene" uid="uid://ripple12345" path="res://ripple.tscn" id="7_ripple"]
[ext_resource type="PackedScene" uid="uid://8tvcwvkjyyg0" path="res://collectible_diamond.tscn" id="11_diamond"]
[ext_resource type="PackedScene" uid="uid://rocket12345" path="res://rocket.tscn" id="13_rocket"]
[ext_resource type="PackedScene" uid="uid://csuvqeghi0eys" path="res://tutorial_overlay.tscn" id="14_tutorial"]
[ext_resource type="PackedScene" path="res://rails.tscn" id="15_rails"]
[ext_resource type="PackedScene" uid="uid://dfyqdks5j2x8h" path="res://funnel.tscn" id="16_funnel"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_env"]
panorama = ExtResource("3_hdr")

[sub_resource type="Sky" id="Sky_env"]
sky_material = SubResource("PanoramaSkyMaterial_env")

[sub_resource type="Environment" id="Environment_main"]
background_mode = 2
sky = SubResource("Sky_env")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.2, 0.5, 0.8, 1)
metallic = 0.7
roughness = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_trigger"]
size = Vector3(4, 2, 4)

[sub_resource type="PlaneMesh" id="PlaneMesh_water"]
size = Vector2(10000, 10000)

[sub_resource type="Shader" id="Shader_water"]
code = "shader_type spatial;

uniform vec4 albedo : source_color = vec4(0.0, 0.2, 0.4, 0.8);
uniform float metallic : hint_range(0.0, 1.0) = 0.8;
uniform float roughness : hint_range(0.0, 1.0) = 0.2;
uniform sampler2D texture_normal;
uniform sampler2D texture_normal2;
uniform vec2 wave_direction = vec2(2.0, 0.0);
uniform vec2 wave_direction2 = vec2(0.0, 1.0);
uniform float time_scale : hint_range(0.0, 0.2, 0.005) = 0.025;

void fragment() {
	vec2 time = (TIME * wave_direction) * time_scale;
	vec2 time2 = (TIME * wave_direction2) * time_scale;
	
	vec3 normal_blend = mix(texture(texture_normal, UV * 125.0 + time).rgb, texture(texture_normal2, UV * 125.0 + time2).rgb, 0.5);
	
	ALBEDO = albedo.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	NORMAL_MAP = normal_blend;
	ALPHA = albedo.a;
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_water"]
noise_type = 3
fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_water"]
noise = SubResource("FastNoiseLite_water")
seamless = true
as_normal_map = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_water"]
render_priority = 0
shader = SubResource("Shader_water")
shader_parameter/albedo = Color(0, 0.2, 0.4, 0.8)
shader_parameter/metallic = 0.8
shader_parameter/roughness = 0.2
shader_parameter/texture_normal = SubResource("NoiseTexture2D_water")
shader_parameter/texture_normal2 = SubResource("NoiseTexture2D_water")
shader_parameter/wave_direction = Vector2(2, 0)
shader_parameter/wave_direction2 = Vector2(0, 1)
shader_parameter/time_scale = 0.015

[sub_resource type="BoxShape3D" id="BoxShape3D_water"]
size = Vector3(10000, 1, 10000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_particles"]
shading_mode = 0
albedo_color = Color(0.5, 0.9, 1, 1)
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="SphereMesh" id="SphereMesh_particles"]
material = SubResource("StandardMaterial3D_particles")
radius = 0.06
height = 0.12
radial_segments = 8
rings = 4

[sub_resource type="Curve" id="Curve_particles"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.2, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.8), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_particles"]
offsets = PackedFloat32Array(0, 0.1, 1)
colors = PackedColorArray(1, 1, 1, 0, 10, 10, 10, 1, 10, 10, 10, 1)

[node name="Game" type="Node3D"]
script = ExtResource("5_game")
marble_scene = ExtResource("4_marble_scene")
ripple_scene = ExtResource("7_ripple")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LivesLabel" type="Label" parent="HUD"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Lives: 7"

[node name="WinLabel" type="Label" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundGenerator" type="Node" parent="."]
script = ExtResource("6_sound")

[node name="LevelPivot" type="Node3D" parent="."]
script = ExtResource("1_level")

[node name="LevelGeometry" type="CSGCombiner3D" parent="LevelPivot"]
use_collision = true

[node name="Floor" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(1.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, -1, 0)
size = Vector3(24, 2, 24)
material = SubResource("StandardMaterial3D_floor")

[node name="EdgeGuard" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(1.5, 0, 0, 0, 1, 0, 0, 0, 0.015393671, 0, 0.5945916, -17.815275)
size = Vector3(24, 1.217041, 24)
material = SubResource("StandardMaterial3D_floor")

[node name="Groove1" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.93225, 0.023406982, 8.725693)
operation = 2
size = Vector3(2, 2, 16)

[node name="Groove6" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.927301, 0, 11.322189)
operation = 2
size = Vector3(2, 2, 16)

[node name="Groove2" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3083496, 0, 8)
operation = 2
size = Vector3(13.383301, 2, 2)

[node name="Groove7" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.597122, 0, 15.729052)
operation = 2
size = Vector3(13.383301, 2, 2)

[node name="Groove3" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.0327244, 0, 0)
operation = 2
size = Vector3(2, 2, 16)

[node name="Groove4" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(0.93671495, -0.35009295, 0, 0.35009295, 0.93671495, 0, 0, 0, 0.33785796, 5.1746025, 0.8677814, -4.153061)
operation = 2
size = Vector3(5.3654785, 2, 8.829956)

[node name="StartArea" type="CSGBox3D" parent="LevelPivot/LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.137207, 0, 5.29183)
operation = 2
size = Vector3(4, 2, 4)

[node name="FinishTrigger" type="Area3D" parent="LevelPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.416832, 0, -13.083199)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelPivot/FinishTrigger"]
shape = SubResource("BoxShape3D_trigger")

[node name="Diamond1" parent="LevelPivot" instance=ExtResource("11_diamond")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.9447312, 1, -13.49066)

[node name="Diamond2" parent="LevelPivot" instance=ExtResource("11_diamond")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.059209, 1.6450925, 2.9810872)

[node name="Diamond4" parent="LevelPivot" instance=ExtResource("11_diamond")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.301655, 0.085258484, 15.726624)

[node name="Diamond6" parent="LevelPivot" instance=ExtResource("11_diamond")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.220215, 1.1515226, 2.0191078)

[node name="Rocket" parent="LevelPivot" instance=ExtResource("13_rocket")]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 13.5, -1.3467139, -13.393795)

[node name="Rails" parent="LevelPivot" instance=ExtResource("15_rails")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
magnet_strength = 100.0

[node name="Funnel" parent="LevelPivot" instance=ExtResource("16_funnel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.638674, 3.7162037, 13.551638)

[node name="CameraRig" type="Node3D" parent="."]
script = ExtResource("2_camera")
follow_speed = 5.0

[node name="CameraPivot" type="Node3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.642788, 0.766044, 0, -0.766044, 0.642788, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraRig/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 35)
current = true

[node name="WaterPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20, 0)
mesh = SubResource("PlaneMesh_water")
surface_material_override/0 = SubResource("ShaderMaterial_water")

[node name="WaterArea" type="Area3D" parent="WaterPlane"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterPlane/WaterArea"]
shape = SubResource("BoxShape3D_water")

[node name="StartPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05204256, 16.046675, -8.333181)

[node name="SpawnParticles" type="CPUParticles3D" parent="StartPoint"]
emitting = false
amount = 800
one_shot = true
mesh = SubResource("SphereMesh_particles")
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -10.0
radial_accel_max = -10.0
damping_min = 5.0
damping_max = 5.0
scale_amount_curve = SubResource("Curve_particles")
color_ramp = SubResource("Gradient_particles")

[node name="TutorialOverlay" parent="." instance=ExtResource("14_tutorial")]

[connection signal="body_entered" from="LevelPivot/FinishTrigger" to="." method="_on_finish_trigger_body_entered"]
[connection signal="body_entered" from="WaterPlane/WaterArea" to="." method="_on_water_entered"]
